<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_alignBottom="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_message_outline_100"
            android:background="@drawable/textfield"
            android:id="@+id/AccountText"
            android:ems="10"
            android:hint="@string/email_hint"
            android:textColorHint="@color/hintColor"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwdText"
        android:hint="@string/pwd_hint"
        android:drawableLeft="@drawable/ic_lock_100"
        android:background="@drawable/textfield"
        android:textColorHint="@color/hintColor"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/AccountText"
        android:layout_alignEnd="@+id/AccountText"
        android:layout_marginLeft="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:id="@+id/loginBtn"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/pwdText"
        android:layout_alignLeft="@+id/pwdText"
        android:layout_alignStart="@+id/pwdText"
        android:layout_alignRight="@+id/pwdText"
        android:layout_alignEnd="@+id/pwdText"
        android:background="@color/btnBgColor"
        android:onClick="login_onClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fb_login_btn"
        android:id="@+id/button2"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/loginBtn"
        android:layout_alignLeft="@+id/loginBtn"
        android:layout_alignStart="@+id/loginBtn"
        android:layout_alignRight="@+id/loginBtn"
        android:layout_alignEnd="@+id/loginBtn"
        android:background="@color/btnBgColor"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:id="@+id/button3"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:background="@color/btnBgColor"
        android:onClick="rg_onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Server Text"
        android:id="@+id/serverText"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView" />
</RelativeLayout>
